fixed some animation bugs. changed to slide from left instead of top. added link to cv in about section so that a link is there on mobile.

--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@ body {
   .hidden {
     opacity: 0;
     filter: blur(0);
-    transform: translateY(-50%);
-    transition: opacity 1s, filter 1s, transform 1s;
+    transform: translateX(-20%);
+    transition: opacity 1.2s, filter 1.2s, transform 1.2s;
   }
   #tagline.hidden {
+    transform: translateX(0%);
     transition-delay: 1s;
   }
   header div h2:after {
@@ -164,6 +165,17 @@ h4 {
 .about-text {
   background-color: rgba(255, 255, 255, 0.6);
 }
+.about-text p {
+  font-size: 1.5rem;
+  font-family: "Fira Code", monospace;
+}
+.about-text .about-cv-link {
+  color: #470c8f;
+}
+.about-text .about-cv-link:hover {
+  color: #c99feb;
+  transition: color 0.4s;
+}
 
 .project {
   background-color: rgba(255, 255, 255, 0.6);
@@ -187,9 +199,19 @@ footer {
   background-color: #f9fefe;
 }
 
+@media screen and (max-width: 992px) and (prefers-reduced-motion: no-preference) {
+  .hidden {
+    transform: translateX(0%);
+  }
+}
 @media screen and (max-width: 992px) {
   header div h1 {
     font-size: 6rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  .about-text p {
+    font-size: 1rem;
   }
 }
 
